--- a/HamsterWars/Pages/My Pages/MatchWinners.razor
+++ b/HamsterWars/Pages/My Pages/MatchWinners.razor
@@ -67,7 +67,8 @@ else
     /// <returns>losing hamster object</returns>
     private HamsterModel GetLoser(int loserId)
     {
-        LoserHamster = Services.GetResults.GetHamsterResult(loserId,hamsters);
+        LoserHamster = Application.Services.GetResults.GetHamsterResult(loserId, hamsters);
+       
         return LoserHamster;
     }
     }
