--- a/HamsterWars/_Imports.razor
+++ b/HamsterWars/_Imports.razor
@@ -10,6 +10,6 @@
 @using HamsterWars.Shared
 @using DataAccessLibrary
 @using DataAccessLibrary.Models
-@using Services
 @using HamsterWars.Models
 @using HamsterWars.Components
+@using Application.Services
