--- a/HamsterWars/Shared/NavMenu.razor
+++ b/HamsterWars/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/gallery">
-                <span class="oi oi-box" aria-hidden="true"></span> hamsters
+                <span class="oi oi-box" aria-hidden="true"></span> Gallery
             </NavLink>
         </div>
         <div class="nav-item px-3">
