--- a/HamsterWars/Pages/My Pages/History.razor
+++ b/HamsterWars/Pages/My Pages/History.razor
@@ -23,7 +23,7 @@
                 <th scope="row">@result.Id</th>
                 <td>@Winner.Name</td>
                 <td>@Loser.Name</td>
-                <td><button type="button" @onclick="(() => RemoveOneResult(result))" onfocus="location.reload()" class="btn btn-danger">Remove Match</button></td>
+                <td><button type="button" @onclick="(() => RemoveOneResult(result))"  class="btn btn-danger">Remove Match</button></td>
             </tr>
         }
     </tbody>
@@ -56,6 +56,7 @@
     {
         await _rb.RemoveOneResult(result);
         resultList.RemoveAll(x => x.Id == result.Id);
+                                                                                                                                                
     }
     private async Task RemoveAll()
     {
